--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
 
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
 
@@ -56,7 +57,10 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$dagger_version"
     kapt "com.google.dagger:hilt-android-compiler:$dagger_version"
 
-    testImplementation 'junit:junit:4.13.1'
+    implementation 'com.chibatching.kotpref:initializer:2.13.1'
+    implementation 'com.chibatching.kotpref:livedata-support:2.13.1'
+
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.4'
     testImplementation "com.google.dagger:hilt-android-testing:$dagger_version"
     kaptTest "com.google.dagger:hilt-android-compiler:$dagger_version"
