--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
 
-    implementation 'androidx.fragment:fragment-ktx:1.3.1'
+    //noinspection GradleDependency
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
