--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'org.jetbrains.kotlin.kapt'
     id 'dagger.hilt.android.plugin'
+    id 'io.sentry.android.gradle'
 }
 
 android {
@@ -61,6 +62,8 @@ dependencies {
     implementation 'com.chibatching.kotpref:initializer:2.13.1'
     implementation 'com.chibatching.kotpref:livedata-support:2.13.1'
 
+    implementation 'io.sentry:sentry-android:4.3.0'
+
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.4'
     testImplementation "com.google.dagger:hilt-android-testing:$dagger_version"
@@ -68,4 +71,8 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+repositories {
+    mavenCentral()
 }
