--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_version"
+        classpath 'io.sentry:sentry-android-gradle-plugin:1.7.36'
     }
 }
 
