--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.parsdroid.verifycodereader"
+        applicationId "com.parsdroid.verificationcodereader"
         minSdkVersion 17
         targetSdkVersion 30
         versionCode 1
